[package]
name = "bevy_star_skybox"
version = "0.12.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0", default-feature = false, features = ["exr"] }
image = "0.24"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy_panorbit_camera = { git = "ssh://git@github.com/Plonq/bevy_panorbit_camera.git" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
