[package]
name = "bevy_star_skybox"
version = "0.12.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = ["bevy_asset", "exr"] }
image = "0.24"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy = "0.13.0"
bevy_panorbit_camera = "0.17.0"
blake3 = { version = "1.5", features = ["pure"] } # Override blake3 dependency to fix WSL2 to Windows compilation

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
