[package]
name = "bevy_star_skybox"
version = "0.12.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0-rc.3", default-features = false, features = [
    "bevy_asset",
    "exr",
] }
image = "0.24"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy = "0.16.0-rc.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
